week20-terraform/week20-jenkins/main.tf
# Configure the AWS provider
provider "aws" {
  region = "us-east-1"
}

# Create a VPC
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "my-vpc"
  }
}

# Create a subnet
resource "aws_subnet" "subnet" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "my-subnet"
  }
}

# Create an internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "my-internet-gateway"
  }
}

# Create a route table
resource "aws_route_table" "route_table" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "my-route-table"
  }
}

# Associate the route table with the subnet
resource "aws_route_table_association" "route_table_association" {
  subnet_id      = aws_subnet.subnet.id
  route_table_id = aws_route_table.route_table.id
}

# Create a security group for the Jenkins EC2 instance
resource "aws_security_group" "jenkins_security_group" {
  name        = "jenkins-security-group"
  description = "Security group for Jenkins EC2 instance"
  vpc_id      = aws_vpc.vpc.id

  # Allow traffic on port 22 (SSH) from your IP address
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["98.118.136.96/32"]
  }

  # Allow traffic on port 8080 (Jenkins) from any IP address
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow outbound traffic on all ports and protocols
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"          # Allow all protocols
    cidr_blocks = ["0.0.0.0/0"] # Allow to any IP address
  }
}

# Create an EC2 instance
resource "aws_instance" "instance" {
  ami                    = "ami-04581fbf744a7d11f" # Amazon Linux 2 AMI
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.subnet.id
  vpc_security_group_ids = [aws_security_group.jenkins_security_group.id] # Use the new jenkins security group
  tags = {
    Name = "my-instance"
  }
  user_data = <<-EOF
              #!/bin/bash
              sudo yum -y update
              
              # Install Java
              sudo amazon-linux-extras install java-openjdk11 -y
              
              # Add the Jenkins repository
              sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat/jenkins.repo
              sudo rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
              
              # Install Jenkins
              sudo yum -y install jenkins
              
              # Enable and start Jenkins
              sudo systemctl enable jenkins
              sudo systemctl start jenkins
              EOF
}

# Create an S3 bucket for Jenkins artifacts
resource "aws_s3_bucket" "jenkins_artifacts" {
  bucket = "billsjenkinsbucket"
  tags = {
    Name = "Bills Jenkins Artifacts Bucket"
  }
}
resource "aws_s3_bucket_acl" "jenkins_artifacts_acl" {
  bucket = aws_s3_bucket.jenkins_artifacts.id
  acl    = "private"
}

# Output the public IP address of the EC2 instance
output "instance_public_ip" {
  value       = aws_instance.instance.public_ip
  description = "The public IP address of the EC2 instance"
}
